# solo-BullChain

./: Cargo.toml  Dockerfile  README.md  chain_spec.json  para-state  para-wasm
.github/actions/free-disk-space/: action.yml
.github/actions/macos-dependencies/: action.yml
.github/actions/ubuntu-dependencies/: action.yml
.github/workflows/: ci.yml  pr-reminder.yml  release.yml
env-setup/: flake.nix  rust-toolchain.toml
node/: Cargo.toml  README.md
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/bullposting/: Cargo.toml  README.md
pallets/bullposting/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml  rustc-ice-2025-01-11T15_13_32-1941.txt  rustc-ice-2025-01-11T15_13_38-2364.txt
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
